--- a/styles/Cats.module.scss
+++ b/styles/Cats.module.scss
@@ -72,7 +72,7 @@
 
 .details {
     margin-top: 0.5rem;
-    color: var(---cats-card-desc);
+    color: var(--cats-card-desc);
     list-style: none;
     padding: 0;
 }
