menu and cats uniformed colors

--- a/styles/Cats.module.scss
+++ b/styles/Cats.module.scss
@@ -24,10 +24,10 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, minmax(300px, 1fr)); /* Ogni colonna ha una larghezza minima di 300px */
+    grid-template-columns: repeat(3, minmax(300px, 1fr)); 
     gap: 0.5rem;
     margin-top: 2rem;
-    justify-content: center; /* Centrare il contenuto */
+    justify-content: center; 
 }
 
 .card {
@@ -36,9 +36,9 @@
     border-radius: 10px;
     padding: 1.5rem;
     text-align: left;
-    width: 100%; /* Le card occupano tutta la colonna disponibile */
-    max-width: 350px; /* Imposta una larghezza massima uniforme */
-    margin: 0 auto; /* Centrare la card */
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
 }
 
 .image {
@@ -49,35 +49,48 @@
     object-fit: cover;
 }
 
+.name {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--cats-card-title); /* Variabile aggiornata */
+}
+
+.details {
+    margin-top: 0.5rem;
+    color: var(--cats-card-subtitle); /* Usa il colore giusto */
+    list-style: none;
+    padding: 0;
+}
+
+.details li {
+    margin-bottom: 0.25rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--cats-card-subtitle); /* Assicurati che il colore venga applicato */
+}
+.description {
+    margin-top: 1rem;
+    color: var(--cats-card-desc);
+}
+
+.cardSubtitle {
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--cats-card-subtitle);
+    margin-bottom: 0.5rem;
+}
 
 @media (max-width: $media-tablet) {
     .grid {
-        grid-template-columns: repeat(2, 1fr); /* 2 colonne per schermi più piccoli */
-        gap: 0.5rem; /* Mantieni uno spazio ravvicinato anche sui dispositivi più piccoli */
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.5rem;
     }
 }
 
 @media (max-width: $media-mobile) {
     .grid {
-        grid-template-columns: 1fr; /* 1 colonna per schermi molto piccoli */
-        gap: 0.5rem; /* Stessa cosa qui, ridotto lo spazio tra le card */
+        grid-template-columns: 1fr;
+        gap: 0.5rem;
     }
-}
-
-.name {
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.details {
-    margin-top: 0.5rem;
-    color: var(--cats-card-desc);
-    list-style: none;
-    padding: 0;
-}
-
-.description {
-    margin-top: 1rem;
-    color: var(--cats-card-desc);
 }
