--- a/styles/global.scss
+++ b/styles/global.scss
@@ -65,6 +65,8 @@
   --services-card-text: var(--light);
   --services-title: var(--foreground);
   --services-description: var(--foreground);
+  --services-bg-gradient-1: var(--accent); 
+  --services-bg-gradient-2: var(--primary);
 
   /* === Find Us === */
   --findus-bg-gradient-1: var(--dark); 
