--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,6 +1,11 @@
 @use "resolution" as *;
 
 .container {
+  background-image: url('/path/to/your/image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,7 +19,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   z-index: 100;
   transition: all 0.3s ease-in-out;
-
+  
   @media (min-width: $media-tablet) {
     padding: 15px 60px;
   }
@@ -143,5 +148,11 @@
 @media (min-width: $media-tablet) {
   .menu_container {
     display: none;
+  }
+}
+
+@media (max-width: $media-tablet) {
+  .container {
+    background-attachment: scroll; /* Cambia da 'fixed' a 'scroll' sui dispositivi mobili */
   }
 }
