--- a/styles/ContactSection.module.scss
+++ b/styles/ContactSection.module.scss
@@ -136,6 +136,7 @@
     padding-left: 10px;
     position: relative;
     margin-bottom: 8px;
+    font-weight: normal;
 }
 
 .contactInfo li:before {
