--- a/styles/HeroSection2.module.scss
+++ b/styles/HeroSection2.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/images/banner2.jpg');
+  background-image: url('/images/banner2.webp');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
